# AndroidDxLib_3D-Shotting_Game

./: README.md
app/src/androidTest/java/androiddxlib/shooting3d/: ExampleInstrumentedTest.java
app/src/main/assets/: bullet.blend  bullet.blend1  bullet.mv1  enemy.blend  enemy.mv1  player.blend  player.fbx  player.mv1
app/src/main/cpp/: CMakeLists.txt  MyDxlib.h  native-lib.cpp
app/src/main/cpp/Manager/: ObjectManager.cpp  ObjectManager.h  SceneManager.cpp
app/src/main/cpp/Object/: Base3DObject.h  BaseObject.cpp  BaseObject.h  Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Player.cpp  Player.h
app/src/main/cpp/Scene/: BootScene.cpp  ClearScene.cpp  ClearScene.h  PlayScene.cpp  PlayScene.h  TitleScene.cpp  TitleScene.h
app/src/main/java/androiddxlib/shooting3d/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/androiddxlib/shooting3d/: ExampleUnitTest.java
